...

        <TextView
            android:id="@+id/uploadRecipeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/recipeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/recipeNameContent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/prepTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/prepTimeContent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cookTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cookTimeContent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/servings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/servingsContent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/utensils"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/utensilsContent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
...

        <LinearLayout
            android:id="@+id/ingredientsGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textSize="18sp"
                android:textStyle="bold"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ingredientsAmount"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ingredientsUnit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
...
                    android:hint="@string/ingredientsUnitHint"
                    android:textColorHint="#8e9094"
                    app:layout_constraintEnd_toStartOf="@+id/ingredientsName"
                    app:layout_constraintStart_toEndOf="@+id/ingredientsAmount"
                    app:layout_constraintTop_toTopOf="parent">
...

            <Button
                android:id="@+id/addIngredientButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cuisineTypes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cuisineTypesContent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minWidth="220dp"
                app:layout_constraintEnd_toStartOf="@id/addCuisineTypeButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cuisineTypesTitle">

                <AutoCompleteTextView
                    android:id="@+id/cuisineTypesAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
...

            <LinearLayout
                android:id="@+id/cuisineTypeGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/allergyTypes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/allergyTypesContent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minWidth="220dp"
                app:layout_constraintEnd_toStartOf="@id/addAllergyTypeButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/allergyTypesTitle">

                <AutoCompleteTextView
                    android:id="@+id/allergyTypesAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dietTypes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dietTypesContent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
...

        <LinearLayout
            android:id="@+id/stepGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step"
                android:textSize="18sp"
                android:textStyle="bold"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/stepContent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
...

            <Button
                android:id="@+id/addStepButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recipeImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/recipeUploadButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
