...
    <string name="app_name">DishDelish</string>
    <string name="greetingMessage">Hello, %1$s!</string>
    <string name="uploadRecipePageTitle">Upload Recipe</string>
    <string name="uploadRecipePageTip">Fields denoted with * are required</string>
    <string name="uploadRecipePageRecipeName">Recipe Name *</string>
    <string name="reviewRecipePageRecipeName">Recipe Name</string>
    <string name="recipeNameEmptyErrorMessage">Recipe name is required!</string>
    <string name="uploadRecipePageRecipeNameHint">Give your recipe a name</string>
    <string name="uploadRecipePageChooseImg">Choose Image</string>
    <string name="uploadRecipePageButtonText">Upload Recipe</string>
    <string name="prepTime">Prep Time *</string>
    <string name="reviewPrepTime">Prep Time</string>
    <string name="prepTimeHint">0</string>
    <string name="prepTimeEmptyErrorMessage">Preparation time is required!</string>
    <string name="prepTimeInvalidErrorMessage">Preparation time must be positive!</string>
    <string name="cookTime">Cook Time *</string>
    <string name="reviewCookTime">Cook Time</string>
    <string name="cookTimeHint">0</string>
    <string name="cookTimeEmptyErrorMessage">Cooking time is required!</string>
    <string name="cookTimeInvalidErrorMessage">Cooking time must be positive!</string>
    <string name="servings">Servings *</string>
    <string name="reviewServings">Servings</string>
    <string name="servingsHint">e.g. 5</string>
    <string name="servingsEmptyErrorMessage">Number of serving is required!</string>
    <string name="servingsInvalidErrorMessage">Number of serving must be positive!</string>
    <string name="utensils">Utensils</string>
    <string name="reviewUtensils">Utensils</string>
    <string name="utensilsHint">e.g. chopsticks</string>
    <string name="ingredients">Ingredients *</string>
    <string name="reviewIngredients">Ingredients</string>
    <string name="ingredientsAmount">No.</string>
...
    <string name="ingredientsAmountEmptyErrorMessage">Ingredient amount is required!</string>
    <string name="ingredientsAmountInvalidErrorMessage">Ingredient amount must be positive!</string>
    <string name="ingredientsUnitEmptyErrorMessage">Ingredient unit is required!</string>
    <string name="ingredientsNameEmptyErrorMessage">Ingredient name is required!</string>
    <string name="steps">Steps</string>
    <string name="reviewSteps">Steps</string>
    <string name="stepsEmptyErrorMessage">Step is required!</string>
    <string name="pantry">Pantry</string>
    <string name="allergy">Allergy</string>
    <string name="diet">Diet</string>
    <string name="cuisine">Cuisine</string>
    <string name="ingredientsAmountHint">2</string>
    <string name="ingredientsUnitHint">cups</string>
...
