<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/type"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxWidth="200dp"
    android:gravity="center"
    android:theme="@style/Theme.SDPBootcamp">

...
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/removeType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/removeType"
        android:layout_width="25dp"
...
